--- a/app/src/main/res/layout/activity_register6.xml
+++ b/app/src/main/res/layout/activity_register6.xml
@@ -14,107 +14,262 @@
         android:layout_marginTop="64dp"
         android:fontFamily="@font/notosanskr_bold"
         android:includeFontPadding="false"
-        android:text="프로필을\n설정해주세요."
+        android:text="관심사를\n선택해주세요."
         android:textSize="24sp"
+        android:textColor="@color/main_black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
+    <Button
+        android:id="@+id/study_btn"
+        android:layout_width="0dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="@dimen/spacing_m"
+        android:layout_marginEnd="@dimen/spacing_m"
+        android:layout_marginTop="@dimen/spacing_xl"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+
+        style="?android:attr/borderlessButtonStyle"
+        android:background="@drawable/ic_rounded_rectangle" />
+
+    <ImageView
+        android:id="@+id/image_study"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="@dimen/spacing_m"
+        android:layout_marginLeft="@dimen/spacing_m"
+        android:layout_marginTop="@dimen/spacing_m"
+        android:layout_marginBottom="@dimen/spacing_m"
+        app:layout_constraintStart_toStartOf="@id/study_btn"
+        app:layout_constraintTop_toTopOf="@id/study_btn"
+        app:layout_constraintBottom_toBottomOf="@id/study_btn"
+
+        android:contentDescription="@null"
+        android:src="@drawable/writing_hand" />
+
+    <TextView
+        android:id="@+id/tv_study_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="43dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        android:layout_marginStart="@dimen/spacing_m"
+        android:layout_marginLeft="@dimen/spacing_m"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintStart_toEndOf="@id/image_study"
+        app:layout_constraintTop_toTopOf="@id/study_btn"
+        app:layout_constraintBottom_toBottomOf="@id/study_btn"
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        android:text="스터디"
+        android:textSize="16sp"
+        android:textColor="#3b3e4a"
+        android:fontFamily="@font/notosanskr_bold" />
 
-            <Button
-                android:id="@+id/study_btn"
-                android:layout_width="160dp"
-                android:layout_height="64dp"
-                android:layout_marginRight="@dimen/spacing_xs"
-                android:background="@drawable/ic_rounded_rectangle"
-                android:drawableLeft="@drawable/writing_hand"
-                android:drawablePadding="@dimen/spacing_xxs"
-                android:fontFamily="@font/notosanskr_bold"
-                android:includeFontPadding="false"
-                android:gravity="fill_vertical"
-                android:paddingLeft="@dimen/spacing_xxl_2"
-                android:text="스터디"
-                android:textColor="@color/sub_black"
-                android:textSize="16sp"
-                style="?android:attr/borderlessButtonStyle" />
+    <TextView
+        android:id="@+id/tv_study_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintStart_toEndOf="@id/tv_study_1"
+        app:layout_constraintTop_toTopOf="@id/study_btn"
+        app:layout_constraintBottom_toBottomOf="@id/study_btn"
 
-            <Button
-                android:id="@+id/diet_btn"
-                android:layout_width="160dp"
-                android:layout_height="64dp"
-                android:layout_marginRight="@dimen/spacing_xs"
-                android:background="@drawable/ic_rounded_rectangle"
-                android:drawableLeft="@drawable/diet"
-                android:drawablePadding="@dimen/spacing_xxs"
-                android:fontFamily="@font/notosanskr_bold"
-                android:gravity="fill_vertical"
-                android:includeFontPadding="false"
-                android:paddingLeft="11dp"
-                android:text="운동 / 다이어트"
-                android:textColor="@color/sub_black"
-                android:textSize="16sp"
-                style="?android:attr/borderlessButtonStyle" />
-        </LinearLayout>
+        android:text="를 하고 싶어요"
+        android:textSize="16sp"
+        android:textColor="#3b3e4a"
+        android:fontFamily="@font/notosanskr_regular" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+    <Button
+        android:id="@+id/diet_btn"
+        android:layout_width="0dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@id/study_btn"
+        app:layout_constraintEnd_toEndOf="@id/study_btn"
+        app:layout_constraintTop_toBottomOf="@id/study_btn"
 
-            <Button
-                android:id="@+id/cultural_btn"
-                android:layout_width="160dp"
-                android:layout_height="64dp"
-                android:layout_marginTop="@dimen/spacing_xs"
-                android:layout_marginRight="@dimen/spacing_xs"
-                android:background="@drawable/ic_rounded_rectangle"
-                android:drawableLeft="@drawable/draw"
-                android:drawablePadding="@dimen/spacing_xxs"
-                android:fontFamily="@font/notosanskr_bold"
-                android:includeFontPadding="false"
-                android:gravity="fill_vertical"
-                android:paddingLeft="33dp"
-                android:text="문화생활"
-                android:textColor="@color/sub_black"
-                android:textSize="16sp"
-                style="?android:attr/borderlessButtonStyle" />
+        style="?android:attr/borderlessButtonStyle"
+        android:background="@drawable/ic_rounded_rectangle" />
 
-            <Button
-                android:id="@+id/game_btn"
-                android:layout_width="160dp"
-                android:layout_height="64dp"
-                android:layout_marginTop="@dimen/spacing_xs"
-                android:layout_marginRight="@dimen/spacing_xs"
-                android:background="@drawable/ic_rounded_rectangle"
-                android:drawableLeft="@drawable/game"
-                android:drawablePadding="@dimen/spacing_xxs"
-                android:fontFamily="@font/notosanskr_bold"
-                android:includeFontPadding="false"
-                android:gravity="fill_vertical"
-                android:paddingLeft="48dp"
-                android:text="게임"
-                android:textColor="@color/sub_black"
-                android:textSize="16sp"
-                style="?android:attr/borderlessButtonStyle" />
-        </LinearLayout>
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/image_diet"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="@dimen/spacing_m"
+        android:layout_marginLeft="@dimen/spacing_m"
+        android:layout_marginTop="@dimen/spacing_m"
+        android:layout_marginBottom="@dimen/spacing_m"
+        app:layout_constraintStart_toStartOf="@id/diet_btn"
+        app:layout_constraintTop_toTopOf="@id/diet_btn"
+        app:layout_constraintBottom_toBottomOf="@id/diet_btn"
+
+        android:contentDescription="@null"
+        android:src="@drawable/diet" />
+
+    <TextView
+        android:id="@+id/tv_diet_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/spacing_m"
+        android:layout_marginLeft="@dimen/spacing_m"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintStart_toEndOf="@id/image_diet"
+        app:layout_constraintTop_toTopOf="@id/diet_btn"
+        app:layout_constraintBottom_toBottomOf="@id/diet_btn"
+
+        android:text="운동 / 다이어트"
+        android:textSize="16sp"
+        android:textColor="#3b3e4a"
+        android:fontFamily="@font/notosanskr_bold" />
+
+    <TextView
+        android:id="@+id/tv_diet_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintStart_toEndOf="@id/tv_diet_1"
+        app:layout_constraintTop_toTopOf="@id/diet_btn"
+        app:layout_constraintBottom_toBottomOf="@id/diet_btn"
+
+        android:text="를 하고 싶어요"
+        android:textSize="16sp"
+        android:textColor="#3b3e4a"
+        android:fontFamily="@font/notosanskr_regular" />
+
+    <Button
+        android:id="@+id/cultural_btn"
+        android:layout_width="0dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@id/diet_btn"
+        app:layout_constraintEnd_toEndOf="@id/diet_btn"
+        app:layout_constraintTop_toBottomOf="@id/diet_btn"
+
+        style="?android:attr/borderlessButtonStyle"
+        android:background="@drawable/ic_rounded_rectangle" />
+
+    <ImageView
+        android:id="@+id/image_cultural"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="@dimen/spacing_m"
+        android:layout_marginLeft="@dimen/spacing_m"
+        android:layout_marginTop="@dimen/spacing_m"
+        android:layout_marginBottom="@dimen/spacing_m"
+        app:layout_constraintStart_toStartOf="@id/cultural_btn"
+        app:layout_constraintTop_toTopOf="@id/cultural_btn"
+        app:layout_constraintBottom_toBottomOf="@id/cultural_btn"
+
+        android:contentDescription="@null"
+        android:src="@drawable/draw" />
+
+    <TextView
+        android:id="@+id/tv_cultural_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/spacing_m"
+        android:layout_marginLeft="@dimen/spacing_m"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintStart_toEndOf="@id/image_cultural"
+        app:layout_constraintTop_toTopOf="@id/cultural_btn"
+        app:layout_constraintBottom_toBottomOf="@id/cultural_btn"
+
+        android:text="문화생활"
+        android:textSize="16sp"
+        android:textColor="#3b3e4a"
+        android:fontFamily="@font/notosanskr_bold" />
+
+    <TextView
+        android:id="@+id/tv_cultural_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintStart_toEndOf="@id/tv_cultural_1"
+        app:layout_constraintTop_toTopOf="@id/cultural_btn"
+        app:layout_constraintBottom_toBottomOf="@id/cultural_btn"
+
+        android:text="을 하고 싶어요"
+        android:textSize="16sp"
+        android:textColor="#3b3e4a"
+        android:fontFamily="@font/notosanskr_regular" />
+
+    <Button
+        android:id="@+id/game_btn"
+        android:layout_width="0dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@id/cultural_btn"
+        app:layout_constraintEnd_toEndOf="@id/cultural_btn"
+        app:layout_constraintTop_toBottomOf="@id/cultural_btn"
+
+        style="?android:attr/borderlessButtonStyle"
+        android:background="@drawable/ic_rounded_rectangle" />
+
+    <ImageView
+        android:id="@+id/image_game"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="@dimen/spacing_m"
+        android:layout_marginLeft="@dimen/spacing_m"
+        android:layout_marginTop="@dimen/spacing_m"
+        android:layout_marginBottom="@dimen/spacing_m"
+        app:layout_constraintStart_toStartOf="@id/game_btn"
+        app:layout_constraintTop_toTopOf="@id/game_btn"
+        app:layout_constraintBottom_toBottomOf="@id/game_btn"
+
+        android:contentDescription="@null"
+        android:src="@drawable/game" />
+
+    <TextView
+        android:id="@+id/tv_game_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/spacing_m"
+        android:layout_marginLeft="@dimen/spacing_m"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintStart_toEndOf="@id/image_game"
+        app:layout_constraintTop_toTopOf="@id/game_btn"
+        app:layout_constraintBottom_toBottomOf="@id/game_btn"
+
+        android:text="게임"
+        android:textSize="16sp"
+        android:textColor="#3b3e4a"
+        android:fontFamily="@font/notosanskr_bold" />
+
+    <TextView
+        android:id="@+id/tv_game_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintStart_toEndOf="@id/tv_game_1"
+        app:layout_constraintTop_toTopOf="@id/game_btn"
+        app:layout_constraintBottom_toBottomOf="@id/game_btn"
+
+        android:text="을 하고 싶어요"
+        android:textSize="16sp"
+        android:textColor="#3b3e4a"
+        android:fontFamily="@font/notosanskr_regular" />
 
     <Button
         android:id="@+id/next_btn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="52dp"
         android:layout_margin="@dimen/spacing_m"
         android:background="@drawable/ic_disabled_button"
         android:enabled="false"
