--- a/app/src/main/res/drawable/ic_button_cultural.xml
+++ b/app/src/main/res/drawable/ic_button_cultural.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle" >
-  <solid android:color="#33353d" />
+  <solid android:color="#ff9880" />
   <corners
       android:bottomLeftRadius="8dp"
       android:bottomRightRadius="8dp"
