--- a/app/src/main/res/drawable/ic_camera_black.xml
+++ b/app/src/main/res/drawable/ic_camera_black.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="64">
   <path
       android:pathData="M32,32m-32,0a32,32 0,1 1,64 0a32,32 0,1 1,-64 0"
-      android:fillColor="#684bff"/>
+      android:fillColor="#33353d"/>
   <path
       android:pathData="M43,44L21,44a4,4 0,0 1,-4 -4L17,28a4,4 0,0 1,4 -4h4.333L25.333,23a4,4 0,0 1,4 -4h5.333a4,4 0,0 1,4 4v1L43,24a4,4 0,0 1,4 4v12a4,4 0,0 1,-4 4zM32,27.333A6.667,6.667 0,1 0,38.667 34,6.675 6.675,0 0,0 32,27.333z"
       android:fillColor="#fff"/>
