--- a/app/src/main/res/drawable/ic_check2.xml
+++ b/app/src/main/res/drawable/ic_check2.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:pathData="M9.955,16.946h-0.055a1,1 0,0 1,-0.726 -0.373l-4,-5a1,1 0,0 1,0.156 -1.407,1 1,0 0,1 1.406,0.157l3.3,4.128 7.21,-7.21a1,1 0,0 1,1.414 0,1 1,0 0,1 0,1.414l-8,8a1,1 0,0 1,-0.705 0.291z"
-      android:fillColor="#684bff"/>
+      android:fillColor="#33353d"/>
 </vector>
