--- a/app/src/main/res/drawable/ic_sub_gray_button.xml
+++ b/app/src/main/res/drawable/ic_sub_gray_button.xml
@@ -2,10 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="@dimen/spacing_xs"
     android:shape="rectangle" >
-    <solid android:color="@color/white" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/playviolet" />
+    <solid android:color="@color/sub_gray" />
     <corners
         android:bottomLeftRadius="50dp"
         android:bottomRightRadius="50dp"
