--- a/app/src/main/res/layout/activity_register3.xml
+++ b/app/src/main/res/layout/activity_register3.xml
@@ -16,6 +16,7 @@
         android:includeFontPadding="false"
         android:text="이메일 인증을\n진행해주세요."
         android:textSize="24sp"
+        android:textColor="@color/main_black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,15 +52,15 @@
 
             <Button
                 android:id="@+id/request_number_btn"
-                android:layout_width="wrap_content"
+                android:layout_width="101dp"
                 android:layout_height="34dp"
                 android:layout_alignEnd="@id/email_edit"
                 android:layout_alignRight="@id/email_edit"
                 android:layout_marginTop="@dimen/spacing_xs"
-                android:background="@drawable/ic_blue_lined_button"
+                android:background="@drawable/ic_sub_gray_button"
                 android:fontFamily="@font/notosanskr_bold"
                 android:text="인증번호 전송"
-                android:textColor="@color/playviolet"
+                android:textColor="@color/white"
                 android:textSize="12sp" />
 
             <EditText
@@ -105,7 +106,7 @@
                 android:fontFamily="@font/notosanskr_bold"
                 android:includeFontPadding="false"
                 android:text="확인"
-                android:textColor="@color/playviolet"
+                android:textColor="#33353d"
                 android:textSize="16sp" />
 
         </RelativeLayout>
@@ -123,10 +124,10 @@
                 android:layout_alignEnd="@id/password_edit"
                 android:layout_alignRight="@id/password_edit"
                 android:layout_marginTop="@dimen/spacing_xs"
-                android:background="@drawable/ic_blue_lined_button"
+                android:background="@drawable/ic_sub_gray_button"
                 android:fontFamily="@font/notosanskr_bold"
                 android:text="확인"
-                android:textColor="@color/playviolet"
+                android:textColor="@color/white"
                 android:textSize="12sp" />
 
             <EditText
@@ -148,7 +149,7 @@
     <Button
         android:id="@+id/next_btn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="52dp"
         android:layout_margin="@dimen/spacing_m"
         android:background="@drawable/ic_disabled_button"
         android:enabled="false"
