--- a/app/src/main/res/layout/chat_right_item.xml
+++ b/app/src/main/res/layout/chat_right_item.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="11dp"
-    android:paddingBottom="11dp">
+    android:background="@color/white"
+    android:paddingTop="12dp"
+    android:paddingBottom="12dp">
 
     <TextView
         android:id="@+id/msg_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/spacing_m"
-        android:background="@drawable/ic_blue_rounded_rectangle"
+        android:background="@drawable/ic_chat_right_item"
         android:fontFamily="@font/notosanskr_regular"
         android:includeFontPadding="false"
         android:paddingLeft="@dimen/spacing_m"
