소모임 리스트 화면 UI 수정 및 프로필 화면 UI 추가

--- a/app/src/main/res/layout/chat_room_item.xml
+++ b/app/src/main/res/layout/chat_room_item.xml
@@ -82,7 +82,7 @@
                         android:id="@+id/imageView3"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        app:srcCompat="@drawable/ic_blue_circle" />
+                        app:srcCompat="@drawable/ic_black_circle" />
 
                     <TextView
                         android:id="@+id/unread_msg_cnt"
