--- a/app/src/main/res/layout/fragment_group_list1.xml
+++ b/app/src/main/res/layout/fragment_group_list1.xml
@@ -186,8 +186,6 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/spacing_l"
         app:layout_constraintTop_toBottomOf="@id/layout_filter_category"
-        app:layout_constraintBottom_toBottomOf="parent"
-
-        android:background="@color/sub_gray" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
