--- a/app/src/main/res/layout/group_item.xml
+++ b/app/src/main/res/layout/group_item.xml
@@ -6,132 +6,159 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="112dp"
+        android:padding="@dimen/spacing_m"
         android:layout_marginBottom="@dimen/spacing_m"
-        app:cardBackgroundColor="@color/white">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="@dimen/spacing_m">
+        android:background="@color/white">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/group_pic"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginRight="@dimen/spacing_m"
-                tools:srcCompat="@tools:sample/avatars" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_image_group"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            app:cardElevation="0dp"
+            app:cardCornerRadius="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/location_tV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:background="@drawable/grouplist_tv_shape"
-                    android:fontFamily="@font/notosanskr_regular"
-                    android:includeFontPadding="false"
-                    android:paddingLeft="@dimen/spacing_xs"
-                    android:paddingTop="2dp"
-                    android:paddingRight="@dimen/spacing_xs"
-                    android:paddingBottom="2dp"
-                    android:text="서울 송파"
-                    android:textColor="@color/playviolet"
-                    android:textSize="12sp"
+                <ImageView
+                    android:id="@+id/group_pic"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:contentDescription="@null" />
+
+                <ImageView
+                    android:id="@+id/image_group_category"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:padding="@dimen/spacing_xxs"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
 
-                <TextView
-                    android:id="@+id/category_tV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/spacing_xxs"
-                    android:layout_marginTop="2dp"
-                    android:background="@drawable/grouplist_tv_shape"
-                    android:fontFamily="@font/notosanskr_regular"
-                    android:includeFontPadding="false"
-                    android:paddingLeft="@dimen/spacing_xs"
-                    android:paddingTop="2dp"
-                    android:paddingRight="@dimen/spacing_xs"
-                    android:paddingBottom="2dp"
-                    android:text="스터디"
-                    android:textColor="@color/playviolet"
-                    android:textSize="12sp"
-                    app:layout_constraintStart_toEndOf="@+id/location_tV"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/curr_tV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/notosanskr_regular"
-                    android:includeFontPadding="false"
-                    android:text="1"
-                    android:textColor="@color/playviolet"
-                    android:textSize="16sp"
-                    app:layout_constraintEnd_toStartOf="@+id/textView15"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/notosanskr_regular"
-                    android:includeFontPadding="false"
-                    android:text="/"
-                    android:textColor="@color/sub_gray"
-                    android:textSize="16sp"
-                    app:layout_constraintEnd_toStartOf="@+id/total_tV"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/total_tV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/notosanskr_regular"
-                    android:includeFontPadding="false"
-                    android:text="4"
-                    android:textColor="@color/sub_gray"
-                    android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/subject_tV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="28dp"
-                    android:layout_marginBottom="28dp"
-                    android:fontFamily="@font/notosanskr_bold"
-                    android:includeFontPadding="false"
-                    android:text="그룹 제목"
-                    android:textColor="@color/main_black"
-                    android:textSize="16sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/info_tV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="2dp"
-                    android:fontFamily="@font/notosanskr_regular"
-                    android:includeFontPadding="false"
-                    android:text="그룹 소개"
-                    android:textColor="@color/sub_black"
-                    android:textSize="12sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    android:contentDescription="@null"
+                    android:src="@drawable/writing_hand"
+                    android:background="@drawable/ic_button_study"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/location_tV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacing_m"
+            android:layout_marginLeft="@dimen/spacing_m"
+            app:layout_constraintStart_toEndOf="@id/cv_image_group"
+            app:layout_constraintTop_toTopOf="@id/cv_image_group"
+
+            android:text="서울 송파"
+            android:textSize="12sp"
+            android:textColor="#7c7f90"
+            android:fontFamily="@font/notosanskr_regular"
+
+            android:includeFontPadding="false"
+            android:background="@drawable/ic_profile_rounded_rectangle" />
+
+        <TextView
+            android:id="@+id/subject_tV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/spacing_xxs"
+            app:layout_constraintStart_toStartOf="@id/location_tV"
+            app:layout_constraintTop_toBottomOf="@id/location_tV"
+
+            android:text="UX/UI 스터디"
+            android:textSize="18sp"
+            android:textColor="@color/main_black"
+            android:fontFamily="@font/notosanskr_bold"
+
+            android:includeFontPadding="false" />
+
+        <TextView
+            android:id="@+id/info_tV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            app:layout_constraintStart_toStartOf="@id/subject_tV"
+            app:layout_constraintTop_toBottomOf="@id/subject_tV"
+
+            android:text="자기소개서 스터디 하실 분 구합니다 :)"
+            android:textSize="12sp"
+            android:textColor="#7c7f90"
+            android:fontFamily="@font/notosanskr_regular"
+
+            android:maxLines="1"
+            android:ellipsize="end"
+
+            android:includeFontPadding="false" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/spacing_xxs"
+            android:layout_marginRight="@dimen/spacing_xxs"
+            app:layout_constraintEnd_toStartOf="@id/curr_tV"
+            app:layout_constraintTop_toTopOf="@id/curr_tV"
+            app:layout_constraintBottom_toBottomOf="@id/curr_tV"
+
+            android:contentDescription="@null"
+            app:srcCompat="@drawable/ic_group_subgray" />
+
+        <TextView
+            android:id="@+id/curr_tV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/tv_slash"
+            app:layout_constraintTop_toTopOf="@id/tv_slash"
+            app:layout_constraintBottom_toBottomOf="@id/tv_slash"
+
+            android:text="3"
+            android:textSize="10sp"
+            android:textColor="#595c6a"
+            android:fontFamily="@font/notosanskr_bold"
+
+            android:includeFontPadding="false"/>
+
+        <TextView
+            android:id="@+id/tv_slash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/total_tV"
+            app:layout_constraintTop_toTopOf="@id/total_tV"
+            app:layout_constraintBottom_toBottomOf="@id/total_tV"
+
+            android:text="/"
+            android:textSize="10sp"
+            android:textColor="@color/sub_gray"
+            android:fontFamily="@font/notosanskr_bold"
+
+            android:includeFontPadding="false"/>
+
+        <TextView
+            android:id="@+id/total_tV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/location_tV"
+            app:layout_constraintBottom_toBottomOf="@id/location_tV"
+
+            android:text="5"
+            android:textSize="10sp"
+            android:textColor="@color/sub_gray"
+            android:fontFamily="@font/notosanskr_bold"
+
+            android:includeFontPadding="false"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </LinearLayout>
